--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,5 @@ edition = "2021"
 clap = { version = "^4.5", features = ["derive"] }
 rayon = "1.10.0"
 serde = { version = "^1", features = ["derive"] }
+regex = "^1.10"
+once_cell = "^1.19"
