--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "rloc"
 version = "0.1.0"
 edition = "2021"
+build = "build.rs"
 
 [dependencies]
 clap = { version = "^4.5", features = ["derive"] }
@@ -9,3 +10,10 @@ rayon = "1.10.0"
 serde = { version = "^1", features = ["derive"] }
 regex = "^1.10"
 once_cell = "^1.19"
+
+
+[build-dependencies]
+serde = { version = "^1", features = ["derive"] }
+serde_json = "^1"
+quote = "^1"
+syn = { version = "^2", features = ["full"] }
