--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ build = "build.rs"
 [dependencies]
 clap = { version = "^4.5", features = ["derive"] }
 serde = { version = "^1", features = ["derive"] }
+rayon = { version = "^1" }
 regex = "^1.10"
 once_cell = "^1.19"
 
